--- a/ui/src/app/navbar/navbar.component.html
+++ b/ui/src/app/navbar/navbar.component.html
@@ -1,9 +1,10 @@
 <nav>
   <ul>
-    <li><a routerLink="">Home</a></li>
+    <li><a routerLink="/home" >Home</a></li>
     <li><a routerLink="/news">News</a></li>
     <li><a routerLink="/contact">Contact</a></li>
     <li><a routerLink="/about">About</a></li>
     <li><a routerLink="/admin">Admin</a></li>
   </ul>
 </nav>
+
